--- a/coding challenges/Random Hex Project/randomhex.html
+++ b/coding challenges/Random Hex Project/randomhex.html
@@ -6,31 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Hex Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
-<style>
-    body{
-        background-color: #ff5c5c;
-    }
-    h3{
-        display: inline-block;
-        margin-top: 30px;
-        padding: 15px;
-        box-shadow: 0px 3px 8px rgb(207, 206, 206);
-        border-radius: 5px;
-        font-family: monospace;
-    }
-    .generate{
-        margin-top: 40px;
-        font-size: 20px;
-        margin-bottom: 40px;
-    }
-    .copy{
-        font-size: 18px;
-    }
-    input[type="text"] {
-        font-size: 20px;
-    }
-</style>
 <body>
     <div class="container">
         <div class="row">
@@ -56,34 +34,4 @@
         </div>
     </div>
 </body>
-<script>
-   const body = document.querySelector("body");
-    const generate = document.querySelector(".generate");
-    const hex = document.querySelector("#hex");
-    const input = document.querySelector("#input");
-
-   generate.addEventListener("click", () => {
-   const hexcode = [0,1,2,3,4,5,6,7,8,9,'A','B','C', 'D', 'E', 'F'];
-  var hex_key = "#";
-    for (let i = 0 ; i < 6 ; i++){
-        let hex_value = Math.floor(Math.random() * hexcode.length);
-        hex_key = hex_key + hexcode[hex_value];
-    }
-
-        body.style.backgroundColor = hex_key;
-        hex.innerHTML = hex_key.toLowerCase();
-        input.value = hex_key.toLowerCase();
-    })
-     
-    function doCopy(){
-        input.select();
-        document.execCommand("copy");
-        alert("Copied Hex Code : " + input.value.toLowerCase())
-    }
-
-    input.addEventListener('keyup', ()=> {
-        body.style.backgroundColor = input.value.toLowerCase();
-        hex.innerHTML = input.value.toLowerCase();
-    })
-</script>
 </html>
